Refactor song lyrics structure to use semantic HTML elements; update HTML.txt with new guidance on navigation and semantic tags

--- a/html-css/learning-01/boom.html
+++ b/html-css/learning-01/boom.html
@@ -22,135 +22,137 @@
     </a>
 
     <hr>
-    <h4>Intro</h4>
-    <p class="indented">
-        War, war, war, war
-    </p>
 
-    <hr>
+    <article id="boom-lyrics">
+        <h3>Intro</h3>
+        <p class="indented">
+            War, war, war, war
+        </p>
 
-    <h4>Verse 1</h4>
-    <div class="indented">
-        <p>She's been told before</p>
-        <p>No one does it like her</p>
-        <p>Automated war</p>
-        <p>I'm the newest king of your tragedy</p>
-        <p>(War) See the consequences</p>
-        <p>(War) It was your decision</p>
-        <p>(War) Submit to me, my mission</p>
-        <p>(War) Praise me (Now, now)</p>
-    </div>
+        <hr>
 
-    <hr>
+        <h3>Verse 1</h3>
+        <div class="indented">
+            <p>She's been told before</p>
+            <p>No one does it like her</p>
+            <p>Automated war</p>
+            <p>I'm the newest king of your tragedy</p>
+            <p>(War) See the consequences</p>
+            <p>(War) It was your decision</p>
+            <p>(War) Submit to me, my mission</p>
+            <p>(War) Praise me (Now, now)</p>
+        </div>
 
-    <h4>Pre-Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>Take you all</p>
-        <p>To my new nirvana, you got what you wanted</p>
-        <p>Blood runs on me, come alive</p>
-        <p>And now I'll tear, tear, tear you</p>
-    </div>
+        <h3>Pre-Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>Take you all</p>
+            <p>To my new nirvana, you got what you wanted</p>
+            <p>Blood runs on me, come alive</p>
+            <p>And now I'll tear, tear, tear you</p>
+        </div>
 
-    <h4>Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>Down</p>
-        <p>You said I'm crazy, here's insane (Down)</p>
-        <p>I swear I'll put you all to shame</p>
-        <p>In the end it was just too fucking good to regret</p>
-        <p>Regret, regret</p>
-    </div>
+        <h3>Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>Down</p>
+            <p>You said I'm crazy, here's insane (Down)</p>
+            <p>I swear I'll put you all to shame</p>
+            <p>In the end it was just too fucking good to regret</p>
+            <p>Regret, regret</p>
+        </div>
 
-    <h4>Verse 2</h4>
+        <hr>
 
-    <div class="indented">
-        <p>Yeah, elevated, a new predator</p>
-        <p>I'm the apex, and you made it so</p>
-        <p>I'm a god now, when I level up</p>
-        <p>Oh, think I like it, I'm so</p>
-        <p>Destructive, hear my voices (Ah-ah)</p>
-        <p>When you realize, you're all doomed</p>
-    </div>
+        <h3>Verse 2</h3>
 
-    <hr>
+        <div class="indented">
+            <p>Yeah, elevated, a new predator</p>
+            <p>I'm the apex, and you made it so</p>
+            <p>I'm a god now, when I level up</p>
+            <p>Oh, think I like it, I'm so</p>
+            <p>Destructive, hear my voices (Ah-ah)</p>
+            <p>When you realize, you're all doomed</p>
+        </div>
 
-    <h4>Pre-Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>Take you</p>
-        <p>To my new nirvana, you got what you wanted</p>
-        <p>Blood runs on me, come alive</p>
-        <p>And now I'll tear, tear, tear you</p>
-    </div>
+        <h3>Pre-Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>Take you</p>
+            <p>To my new nirvana, you got what you wanted</p>
+            <p>Blood runs on me, come alive</p>
+            <p>And now I'll tear, tear, tear you</p>
+        </div>
 
-    <h4>Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>Down</p>
-        <p>You said I'm crazy, here's insane (Down)</p>
-        <p>I swear I'll put you all to shame</p>
-        <p>In the end it was just too fucking good to regret</p>
-        <p>Regret, regret</p>
-    </div>
+        <h3>Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>Down</p>
+            <p>You said I'm crazy, here's insane (Down)</p>
+            <p>I swear I'll put you all to shame</p>
+            <p>In the end it was just too fucking good to regret</p>
+            <p>Regret, regret</p>
+        </div>
 
-    <h4>Post-Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>Boom</p>
-        <p>Boom</p>
-        <p>I'll make you scream my name lo-louder, beg me uh</p>
-        <p>Boom</p>
-        <p>Boom</p>
-        <p>I'll come alive now</p>
-    </div>
+        <h3>Post-Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>Boom</p>
+            <p>Boom</p>
+            <p>I'll make you scream my name lo-louder, beg me uh</p>
+            <p>Boom</p>
+            <p>Boom</p>
+            <p>I'll come alive now</p>
+        </div>
 
-    <h4>Bridge</h4>
+        <hr>
 
-    <div class="indented">
-        <p>Silly me, I guess I lost control</p>
-        <p>Out of mind, out of body (Nobody knows)</p>
-        <p>What's in my soul</p>
-    </div>
+        <h3>Bridge</h3>
 
-    <hr>
+        <div class="indented">
+            <p>Silly me, I guess I lost control</p>
+            <p>Out of mind, out of body (Nobody knows)</p>
+            <p>What's in my soul</p>
+        </div>
 
-    <h4>Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>Boom</p>
-        <p>You said I'm crazy, here's insane</p>
-        <p>I'll come ali-live now</p>
-        <p>Boom</p>
-        <p>Scream my name lo-louder, beg me uh (Boom)</p>
-        <p>Now I'll tear you</p>
-        <p>Down</p>
-        <p>You said I'm crazy, here's insane (Down)</p>
-        <p>I swear I'll put you all to shame</p>
-        <p>In the end it was just too fucking good to regret (Oh-oh)</p>
-        <p>Regret, regret</p>
-    </div>
+        <h3>Chorus</h3>
+
+        <div class="indented">
+            <p>Boom</p>
+            <p>You said I'm crazy, here's insane</p>
+            <p>I'll come ali-live now</p>
+            <p>Boom</p>
+            <p>Scream my name lo-louder, beg me uh (Boom)</p>
+            <p>Now I'll tear you</p>
+            <p>Down</p>
+            <p>You said I'm crazy, here's insane (Down)</p>
+            <p>I swear I'll put you all to shame</p>
+            <p>In the end it was just too fucking good to regret (Oh-oh)</p>
+            <p>Regret, regret</p>
+        </div>
+
+    </article>
 
     <hr>
 
     <footer>
-        <h5>
-            Lyrics sourced from <a href="https://genius.com/Evil-neuro-boom-lyrics" title="Genius"
-                target="_blank">Genius</a>.<br>
-            Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons"
-                target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank"
-                title="Flaticon">www.flaticon.com</a>
-        </h5>
+        Lyrics sourced from <a href="https://genius.com/Evil-neuro-boom-lyrics" title="Genius"
+            target="_blank">Genius</a>.<br>
+        Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons"
+            target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank"
+            title="Flaticon">www.flaticon.com</a>
     </footer>
 </body>
 
