--- a/html-css/learning-01/chinatown-blues.html
+++ b/html-css/learning-01/chinatown-blues.html
@@ -23,125 +23,126 @@
 
     <hr>
 
-    <h4>Verse 1</h4>
-    <div class="indented">
-        <p>Headlights, your Mustang witnessed as we’re eye to eye</p>
-        <p>Tell me why, your lack of intuition burns me white</p>
-    </div>
+    <article id="chinatown-blues-lyrics">
+        <h3>Verse 1</h3>
+        <div class="indented">
+            <p>Headlights, your Mustang witnessed as we’re eye to eye</p>
+            <p>Tell me why, your lack of intuition burns me white</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Pre-Chorus</h4>
-    <div class="indented">
-        <p>Only you can make me burn just like the sun</p>
-        <p>Only you can piece me back to one</p>
-    </div>
+        <h3>Pre-Chorus</h3>
+        <div class="indented">
+            <p>Only you can make me burn just like the sun</p>
+            <p>Only you can piece me back to one</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Chorus</h4>
-    <div class="indented">
-        <p>No matter what you do, I’ll stay</p>
-        <p>This isn’t up to you today</p>
-        <p>It hasn’t always been this way</p>
-        <p>I’ve got a lot to prove today</p>
-    </div>
+        <h3>Chorus</h3>
+        <div class="indented">
+            <p>No matter what you do, I’ll stay</p>
+            <p>This isn’t up to you today</p>
+            <p>It hasn’t always been this way</p>
+            <p>I’ve got a lot to prove today</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Post Chorus</h4>
-    <div class="indented">
-        <p>Oh I’ll never go</p>
-        <p>I’ll stay</p>
+        <h3>Post Chorus</h3>
+        <div class="indented">
+            <p>Oh I’ll never go</p>
+            <p>I’ll stay</p>
 
-        <p>I wanna hold you close</p>
-        <p>Today</p>
+            <p>I wanna hold you close</p>
+            <p>Today</p>
 
-        <p>I won’t let you go</p>
-        <p>This way</p>
+            <p>I won’t let you go</p>
+            <p>This way</p>
 
-        <p>Come on, Let’s give em a show</p>
-        <p>Today</p>
-    </div>
+            <p>Come on, Let’s give em a show</p>
+            <p>Today</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Verse 2</h4>
-    <div class="indented">
-        <p>Roll the dice, let’s see how far you’ll push my nerves this time</p>
-        <p>Heavy sigh, I always lose when you apologize</p>
-    </div>
+        <h3>Verse 2</h3>
+        <div class="indented">
+            <p>Roll the dice, let’s see how far you’ll push my nerves this time</p>
+            <p>Heavy sigh, I always lose when you apologize</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Pre-Chorus</h4>
-    <div class="indented">
-        <p>Only you can make me burn just like the sun</p>
-        <p>Only you can piece me back to one</p>
-    </div>
+        <h3>Pre-Chorus</h3>
+        <div class="indented">
+            <p>Only you can make me burn just like the sun</p>
+            <p>Only you can piece me back to one</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Chorus</h4>
-    <div class="indented">
-        <p>No matter what you do, I’ll stay</p>
-        <p>This isn’t up to you today</p>
-        <p>It hasn’t always been this way</p>
-        <p>I’ve got a lot to prove today</p>
-    </div>
+        <h3>Chorus</h3>
+        <div class="indented">
+            <p>No matter what you do, I’ll stay</p>
+            <p>This isn’t up to you today</p>
+            <p>It hasn’t always been this way</p>
+            <p>I’ve got a lot to prove today</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Post Chorus</h4>
-    <div class="indented">
-        <p>I’ll stay</p>
-        <p>Today</p>
-        <p>This way</p>
-        <p>Today</p>
-    </div>
+        <h3>Post Chorus</h3>
+        <div class="indented">
+            <p>I’ll stay</p>
+            <p>Today</p>
+            <p>This way</p>
+            <p>Today</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Bridge</h4>
-    <div class="indented">
-        <p>Even if you let me go...</p>
-        <p>I’ll stay</p>
-        <p>I want hold you close...</p>
-        <p>Today</p>
-        <p>I want to keep feeling...</p>
-        <p>This way</p>
-        <p>I want to keep loving, and loving...</p>
-        <p>Today</p>
-    </div>
+        <h3>Bridge</h3>
+        <div class="indented">
+            <p>Even if you let me go...</p>
+            <p>I’ll stay</p>
+            <p>I want hold you close...</p>
+            <p>Today</p>
+            <p>I want to keep feeling...</p>
+            <p>This way</p>
+            <p>I want to keep loving, and loving...</p>
+            <p>Today</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Chorus</h4>
-    <div class="indented">
-        <p>No matter what you do, I’ll stay</p>
-        <p>This isn’t up to you today</p>
-        <p>It hasn’t always been this way</p>
-        <p>I’ve got a lot to prove today</p>
-    </div>
+        <h3>Chorus</h3>
+        <div class="indented">
+            <p>No matter what you do, I’ll stay</p>
+            <p>This isn’t up to you today</p>
+            <p>It hasn’t always been this way</p>
+            <p>I’ve got a lot to prove today</p>
+        </div>
 
-    <hr>
+        <hr>
 
-    <h4>Outro</h4>
-    <div class="indented">
-        <p>Headlights, your Mustang witnessed me embrace you tight</p>
-        <p>Hazy eyes, I think I’ll pass out in your arms tonight</p>
-    </div>
+        <h3>Outro</h3>
+        <div class="indented">
+            <p>Headlights, your Mustang witnessed me embrace you tight</p>
+            <p>Hazy eyes, I think I’ll pass out in your arms tonight</p>
+        </div>
+
+    </article>
 
     <hr>
 
     <footer>
-        <h5>
-            Lyrics sourced from <a href="https://genius.com/Oddeeo-chinatown-blues-lyrics" title="Genius"
-                target="_blank">Genius</a>.<br>
-            Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons"
-                target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank"
-                title="Flaticon">www.flaticon.com</a>
-        </h5>
+        Lyrics sourced from <a href="https://genius.com/Oddeeo-chinatown-blues-lyrics" title="Genius"
+            target="_blank">Genius</a>.<br>
+        Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons"
+            target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank"
+            title="Flaticon">www.flaticon.com</a>
     </footer>
 </body>
 
