--- a/html-css/learning-01/golden.html
+++ b/html-css/learning-01/golden.html
@@ -25,124 +25,124 @@
 
     <hr>
 
-    <h4>Verse I</h4>
+    <article id="golden-lyrics">
 
-    <div class="indented">
-        <p>I was a ghost, I was alone</p>
-        <p><span lang="ko" title="Eoduwojin apgilsoge">어두워진 앞길속에</span> (Hah) </p>
-        <p>Given the throne, I didn't know how to believe (Hah) </p>
-        <p>I was the queen that I'm meant to be (Ah) </p>
-        <p>I lived two lives, tried to play both sides </p>
-        <p>But I couldn't find my own place (Oh, oh) </p>
-        <p>Called a problem child, 'cause I got too wild </p>
-        <p>But now that's how I'm getting paid, <span lang="ko" title="kkeuteopsi">끝없이</span> on stage</p>
-    </div>
+        <h3>Verse I</h3>
 
-    <hr>
+        <div class="indented">
+            <p>I was a ghost, I was alone</p>
+            <p><span lang="ko" title="Eoduwojin apgilsoge">어두워진 앞길속에</span> (Hah) </p>
+            <p>Given the throne, I didn't know how to believe (Hah) </p>
+            <p>I was the queen that I'm meant to be (Ah) </p>
+            <p>I lived two lives, tried to play both sides </p>
+            <p>But I couldn't find my own place (Oh, oh) </p>
+            <p>Called a problem child, 'cause I got too wild </p>
+            <p>But now that's how I'm getting paid, <span lang="ko" title="kkeuteopsi">끝없이</span> on stage</p>
+        </div>
 
-    <h4>Pre-Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>I'm done hidin', now I'm shinin' </p>
-        <p>Like I'm born to be </p>
-        <p>We dreamin' hard, we came so far </p>
-        <p>Now I believe</p>
-    </div>
+        <h3>Pre-Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>I'm done hidin', now I'm shinin' </p>
+            <p>Like I'm born to be </p>
+            <p>We dreamin' hard, we came so far </p>
+            <p>Now I believe</p>
+        </div>
 
-    <h4>Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>We're goin' up, up, up </p>
-        <p>It's our moment </p>
-        <p>You know together we're glowing </p>
-        <p>Gonna be, gonna be golden </p>
-        <p>Oh, up, up, up </p>
-        <p>With our voices </p>
-        <p><span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> </p>
-        <p>Gonna be, gonna be golden</p>
-    </div>
+        <h3>Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>We're goin' up, up, up </p>
+            <p>It's our moment </p>
+            <p>You know together we're glowing </p>
+            <p>Gonna be, gonna be golden </p>
+            <p>Oh, up, up, up </p>
+            <p>With our voices </p>
+            <p><span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> </p>
+            <p>Gonna be, gonna be golden</p>
+        </div>
 
-    <h4>Post-Chorus</h4>
-    <div class="indented">
-        <p>Oh, I'm done hidin', now I'm shinin' </p>
-        <p>Like I'm born to be </p>
-        <p>Oh, our time, no fears, no lies </p>
-        <p>That's who we're born to be</p>
-    </div>
+        <hr>
 
-    <hr>
+        <h3>Post-Chorus</h3>
+        <div class="indented">
+            <p>Oh, I'm done hidin', now I'm shinin' </p>
+            <p>Like I'm born to be </p>
+            <p>Oh, our time, no fears, no lies </p>
+            <p>That's who we're born to be</p>
+        </div>
 
-    <h4>Verse II</h4>
-    <div class="indented">
-        <p>Waited so long to break these walls down </p>
-        <p>To wake up and feel like me </p>
-        <p>Put these patterns all in the past now </p>
-        <p>And finally live like the girl they all see</p>
-    </div>
+        <hr>
 
-    <hr>
+        <h3>Verse II</h3>
+        <div class="indented">
+            <p>Waited so long to break these walls down </p>
+            <p>To wake up and feel like me </p>
+            <p>Put these patterns all in the past now </p>
+            <p>And finally live like the girl they all see</p>
+        </div>
 
-    <h4>Pre-Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>No more hiding, I'll be shining </p>
-        <p>Like I'm born to be </p>
-        <p>'Cause we are hunters, voices strong </p>
-        <p>And I know I believe</p>
-    </div>
+        <h3>Pre-Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>No more hiding, I'll be shining </p>
+            <p>Like I'm born to be </p>
+            <p>'Cause we are hunters, voices strong </p>
+            <p>And I know I believe</p>
+        </div>
 
-    <h4>Chorus</h4>
+        <hr>
 
-    <div class="indented">
-        <p>We're goin' up, up, up </p>
-        <p>It's our moment </p>
-        <p>You know together we're glowing </p>
-        <p>Gonna be, gonna be golden </p>
-        <p>Oh, up, up, up </p>
-        <p>With our voices </p>
-        <p><span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> </p>
-        <p>Gonna be, gonna be golden</p>
-    </div>
+        <h3>Chorus</h3>
 
-    <hr>
+        <div class="indented">
+            <p>We're goin' up, up, up </p>
+            <p>It's our moment </p>
+            <p>You know together we're glowing </p>
+            <p>Gonna be, gonna be golden </p>
+            <p>Oh, up, up, up </p>
+            <p>With our voices </p>
+            <p><span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> </p>
+            <p>Gonna be, gonna be golden</p>
+        </div>
 
-    <h4>Post-Chorus</h4>
-    <div class="indented">
-        <p>Oh, I'm done hidin', now I'm shining </p>
-        <p>Like I'm born to be </p>
-        <p>Oh, our time, no fears, no lies </p>
-        <p>That's who we're born to be</p>
-    </div>
+        <hr>
 
-    <hr>
+        <h3>Post-Chorus</h3>
+        <div class="indented">
+            <p>Oh, I'm done hidin', now I'm shining </p>
+            <p>Like I'm born to be </p>
+            <p>Oh, our time, no fears, no lies </p>
+            <p>That's who we're born to be</p>
+        </div>
 
-    <h4>Outro</h4>
+        <hr>
 
-    <div class="indented">
-        <p>You know we're gonna be, gonna be golden (Oh) </p>
-        <p>We're gonna be, gonna be (Oh) </p>
-        <p>Born to be, born to be glowin' (Oh) </p>
-        <p><span lang="ko" title="Balkge bitnaneun urin">밝게 빛나는 우리</span> </p>
-        <p>You know that it's our time, no fears, no lies (Oh, oh) </p>
-        <p>That's who we're born to be</p>
-    </div>
+        <h3>Outro</h3>
 
+        <div class="indented">
+            <p>You know we're gonna be, gonna be golden (Oh) </p>
+            <p>We're gonna be, gonna be (Oh) </p>
+            <p>Born to be, born to be glowin' (Oh) </p>
+            <p><span lang="ko" title="Balkge bitnaneun urin">밝게 빛나는 우리</span> </p>
+            <p>You know that it's our time, no fears, no lies (Oh, oh) </p>
+            <p>That's who we're born to be</p>
+        </div>
+    </article>
     <hr>
 
     <footer>
-        <h5>
-            Lyrics sourced from <a
-                href="https://genius.com/Huntr-x-ejae-audrey-nuna-rei-ami-and-kpop-demon-hunters-cast-golden-lyrics"
-                title="Genius" target="_blank">Genius</a>.<br>
-            Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons">Freepik</a> from <a
-                href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a>
-        </h5>
+        Lyrics sourced from <a
+            href="https://genius.com/Huntr-x-ejae-audrey-nuna-rei-ami-and-kpop-demon-hunters-cast-golden-lyrics"
+            title="Genius" target="_blank">Genius</a>.<br>
+        Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons">Freepik</a> from <a
+            href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a>
     </footer>
 </body>
 
