Refactor song lyrics structure to use semantic HTML sections; update HTML.txt with clarifications on section and article elements

--- a/html-css/learning-01/boom.html
+++ b/html-css/learning-01/boom.html
@@ -24,124 +24,149 @@
     <hr>
 
     <article id="boom-lyrics">
-        <h3>Intro</h3>
-        <p class="indented">
-            War, war, war, war
-        </p>
+
+        <section id="intro">
+            <h3>Intro</h3>
+            <p class="indented">
+                War, war, war, war
+            </p>
+        </section>
 
         <hr>
 
-        <h3>Verse 1</h3>
-        <div class="indented">
-            <p>She's been told before</p>
-            <p>No one does it like her</p>
-            <p>Automated war</p>
-            <p>I'm the newest king of your tragedy</p>
-            <p>(War) See the consequences</p>
-            <p>(War) It was your decision</p>
-            <p>(War) Submit to me, my mission</p>
-            <p>(War) Praise me (Now, now)</p>
-        </div>
+        <section id="verse">
+
+            <h3>Verse 1</h3>
+            <div class="indented">
+                <p>She's been told before</p>
+                <p>No one does it like her</p>
+                <p>Automated war</p>
+                <p>I'm the newest king of your tragedy</p>
+                <p>(War) See the consequences</p>
+                <p>(War) It was your decision</p>
+                <p>(War) Submit to me, my mission</p>
+                <p>(War) Praise me (Now, now)</p>
+            </div>
+
+        </section>
 
         <hr>
 
-        <h3>Pre-Chorus</h3>
+        <section id="pre-chorus">
+            <h3>Pre-Chorus</h3>
 
-        <div class="indented">
-            <p>Take you all</p>
-            <p>To my new nirvana, you got what you wanted</p>
-            <p>Blood runs on me, come alive</p>
-            <p>And now I'll tear, tear, tear you</p>
-        </div>
+            <div class="indented">
+                <p>Take you all</p>
+                <p>To my new nirvana, you got what you wanted</p>
+                <p>Blood runs on me, come alive</p>
+                <p>And now I'll tear, tear, tear you</p>
+            </div>
 
-        <hr>
-
-        <h3>Chorus</h3>
-
-        <div class="indented">
-            <p>Down</p>
-            <p>You said I'm crazy, here's insane (Down)</p>
-            <p>I swear I'll put you all to shame</p>
-            <p>In the end it was just too fucking good to regret</p>
-            <p>Regret, regret</p>
-        </div>
+        </section>
 
         <hr>
 
-        <h3>Verse 2</h3>
+        <section id="chorus">
+            <h3>Chorus</h3>
 
-        <div class="indented">
-            <p>Yeah, elevated, a new predator</p>
-            <p>I'm the apex, and you made it so</p>
-            <p>I'm a god now, when I level up</p>
-            <p>Oh, think I like it, I'm so</p>
-            <p>Destructive, hear my voices (Ah-ah)</p>
-            <p>When you realize, you're all doomed</p>
-        </div>
+            <div class="indented">
+                <p>Down</p>
+                <p>You said I'm crazy, here's insane (Down)</p>
+                <p>I swear I'll put you all to shame</p>
+                <p>In the end it was just too fucking good to regret</p>
+                <p>Regret, regret</p>
+            </div>
 
-        <hr>
-
-        <h3>Pre-Chorus</h3>
-
-        <div class="indented">
-            <p>Take you</p>
-            <p>To my new nirvana, you got what you wanted</p>
-            <p>Blood runs on me, come alive</p>
-            <p>And now I'll tear, tear, tear you</p>
-        </div>
+        </section>
 
         <hr>
 
-        <h3>Chorus</h3>
+        <section id="verse">
+            <h3>Verse 2</h3>
 
-        <div class="indented">
-            <p>Down</p>
-            <p>You said I'm crazy, here's insane (Down)</p>
-            <p>I swear I'll put you all to shame</p>
-            <p>In the end it was just too fucking good to regret</p>
-            <p>Regret, regret</p>
-        </div>
-
-        <hr>
-
-        <h3>Post-Chorus</h3>
-
-        <div class="indented">
-            <p>Boom</p>
-            <p>Boom</p>
-            <p>I'll make you scream my name lo-louder, beg me uh</p>
-            <p>Boom</p>
-            <p>Boom</p>
-            <p>I'll come alive now</p>
-        </div>
+            <div class="indented">
+                <p>Yeah, elevated, a new predator</p>
+                <p>I'm the apex, and you made it so</p>
+                <p>I'm a god now, when I level up</p>
+                <p>Oh, think I like it, I'm so</p>
+                <p>Destructive, hear my voices (Ah-ah)</p>
+                <p>When you realize, you're all doomed</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Bridge</h3>
+        <section id="pre-chorus">
+            <h3>Pre-Chorus</h3>
 
-        <div class="indented">
-            <p>Silly me, I guess I lost control</p>
-            <p>Out of mind, out of body (Nobody knows)</p>
-            <p>What's in my soul</p>
-        </div>
+            <div class="indented">
+                <p>Take you</p>
+                <p>To my new nirvana, you got what you wanted</p>
+                <p>Blood runs on me, come alive</p>
+                <p>And now I'll tear, tear, tear you</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Chorus</h3>
+        <section id="chorus">
+            <h3>Chorus</h3>
 
-        <div class="indented">
-            <p>Boom</p>
-            <p>You said I'm crazy, here's insane</p>
-            <p>I'll come ali-live now</p>
-            <p>Boom</p>
-            <p>Scream my name lo-louder, beg me uh (Boom)</p>
-            <p>Now I'll tear you</p>
-            <p>Down</p>
-            <p>You said I'm crazy, here's insane (Down)</p>
-            <p>I swear I'll put you all to shame</p>
-            <p>In the end it was just too fucking good to regret (Oh-oh)</p>
-            <p>Regret, regret</p>
-        </div>
+            <div class="indented">
+                <p>Down</p>
+                <p>You said I'm crazy, here's insane (Down)</p>
+                <p>I swear I'll put you all to shame</p>
+                <p>In the end it was just too fucking good to regret</p>
+                <p>Regret, regret</p>
+            </div>
+        </section>
+
+        <hr>
+
+        <section id="post-chorus">
+            <h3>Post-Chorus</h3>
+
+            <div class="indented">
+                <p>Boom</p>
+                <p>Boom</p>
+                <p>I'll make you scream my name lo-louder, beg me uh</p>
+                <p>Boom</p>
+                <p>Boom</p>
+                <p>I'll come alive now</p>
+            </div>
+        </section>
+
+        <hr>
+
+        <section id="bridge">
+            <h3>Bridge</h3>
+
+            <div class="indented">
+                <p>Silly me, I guess I lost control</p>
+                <p>Out of mind, out of body (Nobody knows)</p>
+                <p>What's in my soul</p>
+            </div>
+        </section>
+
+        <hr>
+
+        <section id="chorus">
+            <h3>Chorus</h3>
+
+            <div class="indented">
+                <p>Boom</p>
+                <p>You said I'm crazy, here's insane</p>
+                <p>I'll come ali-live now</p>
+                <p>Boom</p>
+                <p>Scream my name lo-louder, beg me uh (Boom)</p>
+                <p>Now I'll tear you</p>
+                <p>Down</p>
+                <p>You said I'm crazy, here's insane (Down)</p>
+                <p>I swear I'll put you all to shame</p>
+                <p>In the end it was just too fucking good to regret (Oh-oh)</p>
+                <p>Regret, regret</p>
+            </div>
+        </section>
 
     </article>
 
