--- a/html-css/learning-01/chinatown-blues.html
+++ b/html-css/learning-01/chinatown-blues.html
@@ -24,114 +24,139 @@
     <hr>
 
     <article id="chinatown-blues-lyrics">
-        <h3>Verse 1</h3>
-        <div class="indented">
-            <p>Headlights, your Mustang witnessed as we’re eye to eye</p>
-            <p>Tell me why, your lack of intuition burns me white</p>
-        </div>
+
+        <section id="verse">
+            <h3>Verse 1</h3>
+            <div class="indented">
+                <p>Headlights, your Mustang witnessed as we’re eye to eye</p>
+                <p>Tell me why, your lack of intuition burns me white</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Pre-Chorus</h3>
-        <div class="indented">
-            <p>Only you can make me burn just like the sun</p>
-            <p>Only you can piece me back to one</p>
-        </div>
+        <section id="pre-chorus">
+            <h3>Pre-Chorus</h3>
+            <div class="indented">
+                <p>Only you can make me burn just like the sun</p>
+                <p>Only you can piece me back to one</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Chorus</h3>
-        <div class="indented">
-            <p>No matter what you do, I’ll stay</p>
-            <p>This isn’t up to you today</p>
-            <p>It hasn’t always been this way</p>
-            <p>I’ve got a lot to prove today</p>
-        </div>
+        <section id="chorus">
+            <h3>Chorus</h3>
+            <div class="indented">
+                <p>No matter what you do, I’ll stay</p>
+                <p>This isn’t up to you today</p>
+                <p>It hasn’t always been this way</p>
+                <p>I’ve got a lot to prove today</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Post Chorus</h3>
-        <div class="indented">
-            <p>Oh I’ll never go</p>
-            <p>I’ll stay</p>
+        <section id="post-chorus">
+            <h3>Post Chorus</h3>
+            <div class="indented">
+                <p>Oh I’ll never go</p>
+                <p>I’ll stay</p>
 
-            <p>I wanna hold you close</p>
-            <p>Today</p>
+                <p>I wanna hold you close</p>
+                <p>Today</p>
 
-            <p>I won’t let you go</p>
-            <p>This way</p>
+                <p>I won’t let you go</p>
+                <p>This way</p>
 
-            <p>Come on, Let’s give em a show</p>
-            <p>Today</p>
-        </div>
+                <p>Come on, Let’s give em a show</p>
+                <p>Today</p>
+            </div>
 
-        <hr>
-
-        <h3>Verse 2</h3>
-        <div class="indented">
-            <p>Roll the dice, let’s see how far you’ll push my nerves this time</p>
-            <p>Heavy sigh, I always lose when you apologize</p>
-        </div>
+        </section>
 
         <hr>
 
-        <h3>Pre-Chorus</h3>
-        <div class="indented">
-            <p>Only you can make me burn just like the sun</p>
-            <p>Only you can piece me back to one</p>
-        </div>
+        <section id="verse">
+            <h3>Verse 2</h3>
+            <div class="indented">
+                <p>Roll the dice, let’s see how far you’ll push my nerves this time</p>
+                <p>Heavy sigh, I always lose when you apologize</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Chorus</h3>
-        <div class="indented">
-            <p>No matter what you do, I’ll stay</p>
-            <p>This isn’t up to you today</p>
-            <p>It hasn’t always been this way</p>
-            <p>I’ve got a lot to prove today</p>
-        </div>
+        <section id="pre-chorus">
+            <h3>Pre-Chorus</h3>
+            <div class="indented">
+                <p>Only you can make me burn just like the sun</p>
+                <p>Only you can piece me back to one</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Post Chorus</h3>
-        <div class="indented">
-            <p>I’ll stay</p>
-            <p>Today</p>
-            <p>This way</p>
-            <p>Today</p>
-        </div>
+        <section id="chorus">
+            <h3>Chorus</h3>
+            <div class="indented">
+                <p>No matter what you do, I’ll stay</p>
+                <p>This isn’t up to you today</p>
+                <p>It hasn’t always been this way</p>
+                <p>I’ve got a lot to prove today</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Bridge</h3>
-        <div class="indented">
-            <p>Even if you let me go...</p>
-            <p>I’ll stay</p>
-            <p>I want hold you close...</p>
-            <p>Today</p>
-            <p>I want to keep feeling...</p>
-            <p>This way</p>
-            <p>I want to keep loving, and loving...</p>
-            <p>Today</p>
-        </div>
+        <section id="post-chorus">
+            <h3>Post Chorus</h3>
+            <div class="indented">
+                <p>I’ll stay</p>
+                <p>Today</p>
+                <p>This way</p>
+                <p>Today</p>
+            </div>
+
+        </section>
 
         <hr>
 
-        <h3>Chorus</h3>
-        <div class="indented">
-            <p>No matter what you do, I’ll stay</p>
-            <p>This isn’t up to you today</p>
-            <p>It hasn’t always been this way</p>
-            <p>I’ve got a lot to prove today</p>
-        </div>
+        <section id="bridge">
+            <h3>Bridge</h3>
+            <div class="indented">
+                <p>Even if you let me go...</p>
+                <p>I’ll stay</p>
+                <p>I want hold you close...</p>
+                <p>Today</p>
+                <p>I want to keep feeling...</p>
+                <p>This way</p>
+                <p>I want to keep loving, and loving...</p>
+                <p>Today</p>
+            </div>
+        </section>
 
         <hr>
 
-        <h3>Outro</h3>
-        <div class="indented">
-            <p>Headlights, your Mustang witnessed me embrace you tight</p>
-            <p>Hazy eyes, I think I’ll pass out in your arms tonight</p>
-        </div>
+        <section id="chorus">
+            <h3>Chorus</h3>
+            <div class="indented">
+                <p>No matter what you do, I’ll stay</p>
+                <p>This isn’t up to you today</p>
+                <p>It hasn’t always been this way</p>
+                <p>I’ve got a lot to prove today</p>
+            </div>
+        </section>
+
+        <hr>
+
+        <section id="Outro">
+            <h3>Outro</h3>
+            <div class="indented">
+                <p>Headlights, your Mustang witnessed me embrace you tight</p>
+                <p>Hazy eyes, I think I’ll pass out in your arms tonight</p>
+            </div>
+        </section>
 
     </article>
 
