--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -6,39 +6,43 @@
     <meta charset="UTF-8">
     <meta name="author" content="UnlockTheCode">
     <meta name="description" content="This will contain all the things I learned from the HTML video.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../resources/home.png" type="image/x-icon">
     <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
     <title>The Lyrics of Songs I Like</title>
 </head>
 
 <body>
-    <nav aria-labelledby="table-of-songs">
-        <h1 id="table-of-songs">Table of Songs</h1>
-        <ol>
-            <li>
-                <a href="../learning-01/golden.html">Golden</a>
-            </li>
+    <main>
+        <nav aria-labelledby="table-of-songs">
+            <h1 id="table-of-songs">Table of Songs</h1>
+            <ol>
+                <li>
+                    <a href="../learning-01/golden.html">Golden</a>
+                </li>
 
-            <li>
-                <a href="../learning-01/boom.html">Boom</a>
-            </li>
+                <li>
+                    <a href="../learning-01/boom.html">Boom</a>
+                </li>
 
-            <li>
-                <a href="../learning-01/chinatown-blues.html">Chinatown Blues</a>
-            </li>
-        </ol>
-    </nav>
+                <li>
+                    <a href="../learning-01/chinatown-blues.html">Chinatown Blues</a>
+                </li>
+            </ol>
+        </nav>
 
-    <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">
-        <img src="../resources/pictures/pexels-janson-a.jpg" alt="A person holding a fountain pen" width="300"
-            height="300">
-    </a>
+        <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">
+            <img src="../resources/pictures/pexels-janson-a.jpg" alt="A person holding a fountain pen" width="300"
+                height="300">
+        </a>
 
-    <hr>
-
+        <hr>
+    </main>
+    
     <footer>
         Home icon by <a href="https://www.flaticon.com/uicons" target="_blank">Flaticon</a>
-        Photo by <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">Janson A.</a>
+        Photo by <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">Janson
+            A.</a>
     </footer>
 </body>
 
