Enhance HTML structure and styling: add footer elements, improve table layout, and update HTML notes with new table semantics.

--- a/html-css/learning-01/golden.html
+++ b/html-css/learning-01/golden.html
@@ -24,6 +24,43 @@
             <img src="../resources/pictures/kpopdemonhunters_golden.webp"
                 alt="Kpop Demon Hunters - Golden Cover Picture" width="800" height="400">
         </a>
+        <hr>
+
+        <table>
+            <caption>Unique Song Sections</caption>
+            <thead>
+                <tr>
+                    <th scope="col">Section</th>
+                    <th scope="col">My Unique Interpretations</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="#verse-1">Verse I</a></td>
+                    <td>The first verse of the song</td>
+                </tr>
+                <tr>
+                    <td><a href="#pre-chorus-1">Pre-Chorus</a></td>
+                    <td>The pre-chorus section</td>
+                </tr>
+                <tr>
+                    <td><a href="#chorus-1">Chorus</a></td>
+                    <td>The chorus section</td>
+                </tr>
+                <tr>
+                    <td><a href="#post-chorus-1">Post-Chorus</a></td>
+                    <td>The post-chorus section</td>
+                </tr>
+                <tr>
+                    <td><a href="#verse-2">Verse II</a></td>
+                    <td>The second verse of the song</td>
+                </tr>
+                <tr>
+                    <td><a href="#outro">Outro</a></td>
+                    <td>The outro section</td>
+                </tr>
+            </tbody>
+        </table>
 
         <hr>
 
@@ -170,6 +207,8 @@
             title="Genius" target="_blank">Genius</a>.<br>
         Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons">Freepik</a> from <a
             href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a>
+        <br></br>
+        <hr>
     </footer>
 </body>
 
