Add form for song submission and update HTML notes on form elements

--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -38,7 +38,16 @@
 
         <hr>
     </main>
-    
+
+    <section aria-labelledby="submit-your-song">
+        <h2>Submit Your Song</h2>
+        <form action="placeholder" method="post">
+            <label for="song">Song:</label>
+            <input type="text" id="song" name="song" required>
+            <input type="submit" value="Submit">
+        </form>
+    </section>
+
     <footer>
         Home icon by <a href="https://www.flaticon.com/uicons" target="_blank">Flaticon</a>
         Photo by <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">Janson
