Update form structure: change heading level and enhance input fields with placeholders and autocomplete

--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -40,10 +40,10 @@
     </main>
 
     <section aria-labelledby="submit-your-song">
-        <h2>Submit Your Song</h2>
+        <h3>Submit Your Song</h3>
         <form action="placeholder" method="post">
             <label for="song">Song:</label>
-            <input type="text" id="song" name="song" required>
+            <input type="text" id="song" name="song" required placeholder="Enter song name" autocomplete="on">
             <input type="submit" value="Submit">
         </form>
     </section>
