Update form action URL to use https://httpbin.org/post for testing submissions and add related notes in HTML documentation

--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -41,7 +41,7 @@
 
     <section aria-labelledby="submit-your-song">
         <h3>Submit Your Song</h3>
-        <form action="placeholder" method="post">
+        <form action="https://httpbin.org/post" method="post">
             <label for="song">Song:</label>
             <input type="text" id="song" name="song" required placeholder="Enter song name" autocomplete="on">
             <input type="submit" value="Submit">
@@ -49,8 +49,8 @@
     </section>
 
     <footer>
-        Home icon by <a href="https://www.flaticon.com/uicons" target="_blank">Flaticon</a>
-        Photo by <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">Janson
+        Home icon by <a rel="noopener" href="https://www.flaticon.com/uicons" target="_blank">Flaticon</a>
+        Photo by <a rel="noopener" href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">Janson
             A.</a>
         <br></br>
         <hr>
