Add rel="noopener" attribute to external link for security enhancement

--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -31,7 +31,7 @@
             </ol>
         </nav>
 
-        <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">
+        <a rel="noopener" href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">
             <img src="../resources/pictures/pexels-janson-a.jpg" alt="A person holding a fountain pen" width="300"
                 height="300">
         </a>
