Update contact link to point to the correct HTML file; revise About section heading for clarity and adjust table layout for Chips & Salsa

--- a/html-css/little-taco-shop/index.html
+++ b/html-css/little-taco-shop/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#menu">Menu</a></li>
                     <li><a href="#hours">Store Hours</a></li>
-                    <li><a href="#contacts">Contacts</a></li>
+                    <li><a href="../little-taco-shop/contact.html">Contacts</a></li>
                 </ul>
             </nav>
 
@@ -32,8 +32,8 @@
 
         <hr>
         <section id="about">
-            <h2>About Us - The Little Taco Shop</h2>
-            <p>Welcome to the Little Taco Shop, where we serve the most delicious and authentic tacos in town! Our
+            <h2>The Little Taco Shop</h2>
+            <p>Welcome to the <em>Little Taco Shop</em>, where we serve the most <i>delicious</i> and <i>authentic</i> tacos in town! Our
                 mission is to provide a cozy atmosphere where you can enjoy fresh, flavorful tacos made with love and
                 the finest ingredients. Whether you're a fan of classic flavors or adventurous combinations, we have
                 something for everyone. Come visit us and experience the taste of Mexico right in your neighborhood!
@@ -99,7 +99,7 @@
                     <td>Three classic chicken tacos served with a side of rice, beans, and a drink.</td>
                 </tr>
                 <tr>
-                    <td colspan="3">Chips & Salsa $3.00</td>
+                    <td colspan="4">Chips & Salsa $3.00</td>
                 </tr>
             </table>
         </section>
